--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "@types/react-native-dotenv": "^0.2.0",
+    "axios": "^0.21.1",
     "expo": "~42.0.0",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
@@ -28,8 +30,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-dotenv": "^3.1.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
