--- a/app.json
+++ b/app.json
@@ -32,8 +32,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "io.coastr.app",
-      "googleServicesFile": "./google-services.json"
+      "package": "io.coastr.app"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
