--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@gorhom/bottom-sheet": "^3.6.6",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
@@ -43,8 +44,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
