--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll"
@@ -36,7 +35,7 @@
     "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-dotenv": "^3.1.1",
     "react-native-gesture-handler": "~1.10.2",
@@ -45,7 +44,9 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "expo-updates": "~0.8.1",
+    "react-native-unimodules": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -55,5 +56,7 @@
     "jest-expo": "~41.0.0-beta.0",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "name": "mobile",
+  "version": "1.0.0"
 }
