--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
+    "react-qr-scanner": "^1.0.0-alpha.7"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
